...

                    Text("Enter your password to unlock")
                        .font(.title3)
                        .foregroundStyle(.secondary)

                    VStack(spacing: 12) {
                        SecureField("Password", text: $password)
                            .textFieldStyle(.roundedBorder)
                            .frame(width: 300)
                            .textContentType(.password)
                            .autocorrectionDisabled()
                            #if os(iOS)
                                .textInputAutocapitalization(.never)
...

                            Button {
                                Task {
                                    await unlock()
                                }
                            } label: {
                                Text("Unlock")
                                    .frame(width: biometricType != .none ? 145 : 200)
                            }
                            .buttonStyle(.borderedProminent)
                            .controlSize(.large)
                            .disabled(password.isEmpty)
                        }
...
